k8s/frontend/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: groupe4
  name: frontend-route
spec:
  parentRefs:
  - name: http-gateway
    namespace: nginx-gateway
  hostnames:
  - devops.jayllyz.fr
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-service
      port: 80
